plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.7'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.hot6ix'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

// Boot BOM이 관리하는 com.querydsl 5.1.0은 Hibernate 6 기준 빌드라 Boot 4(Hibernate 7.2) 위에서는 검증되지 않은 조합임.
ext {
	queryDslVersion = '7.5'
	// Boot BOM이 이 좌표를 관리하지 않는다. 7.7.0이 Spring 7 / Spring Boot 4 공식 호환 확인된 최신판(2026-08 기준).
	shedLockVersion = '7.7.0'
}

repositories {
	mavenCentral()
}

dependencies {
	// Spring
	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	// API Documentation
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:3.0.2'

	// 계측 — actuator가 micrometer-core를 이미 끌고 오므로 레지스트리만 추가한다.
	// 버전은 Boot BOM이 관리한다.
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'io.micrometer:micrometer-registry-prometheus'

	// Lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// Database
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	runtimeOnly 'com.mysql:mysql-connector-j'

	// Redis — Lettuce 클라이언트가 기본 포함된다 (Boot BOM이 버전 관리).
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	// 로그인 세션 저장소. 기존 RedisConnectionFactory를 그대로 재사용한다.
	implementation 'org.springframework.boot:spring-boot-starter-session-data-redis'

	// ShedLock
	implementation "net.javacrumbs.shedlock:shedlock-spring:${shedLockVersion}"
	implementation "net.javacrumbs.shedlock:shedlock-provider-redis-spring:${shedLockVersion}"

	// Boot 4는 자동설정까지 모듈이라 flyway-core만 넣으면 Flyway가 아예 안 돌고,
	// Flyway 10부터는 DB별 지원도 갈려서 flyway-mysql이 없으면 MySQL을 못 알아본다.
	implementation 'org.springframework.boot:spring-boot-starter-flyway'
	implementation 'org.flywaydb:flyway-mysql'

	// QueryDSL — apt는 :jpa 분류자여야 JPAAnnotationProcessor가 등록된다.
	// 분류자 없는 jar에는 그 서비스 등록이 없어 Q타입이 안 생긴다.
	// jakarta.persistence-api·jakarta.annotation-api는 querydsl-apt가 compile scope로
	// 끌고 오므로 annotationProcessor에 따로 선언하지 않는다.
	// Lombok보다 뒤에 두어 애노테이션 프로세서 순서를 Lombok 우선으로 유지한다.
	implementation "io.github.openfeign.querydsl:querydsl-jpa:${queryDslVersion}"
	annotationProcessor "io.github.openfeign.querydsl:querydsl-apt:${queryDslVersion}:jpa"

	// AWS S3 — presigned URL 발급용.
	// S3Presigner는 s3 아티팩트 안에 들어 있다(software.amazon.awssdk.services.s3.presigner).
	// s3-presigner라는 아티팩트는 존재하지 않는다.
	// 버전은 BOM으로 고정해 다른 awssdk 모듈을 추가할 때도 어긋나지 않게 한다.
	implementation platform('software.amazon.awssdk:bom:2.50.2')
	implementation 'software.amazon.awssdk:s3'

	// Test
	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
	// @DataJpaTest 슬라이스는 Flyway 자동설정을 기본으로 안 켠다.
	testImplementation 'org.springframework.boot:spring-boot-starter-flyway-test'
	testImplementation 'org.springframework.boot:spring-boot-testcontainers'
	testImplementation 'org.testcontainers:testcontainers-mysql'
	testImplementation 'org.testcontainers:testcontainers-junit-jupiter'
	// GenericContainer로 Redis를 직접 띄우는 ShedLock 락 테스트용. testcontainers-mysql이 코어를
	// 전이 의존성으로 끌고 오지만, MySQL 모듈의 의존 그래프가 바뀌면 깨질 수 있어 명시한다.
	testImplementation 'org.testcontainers:testcontainers'
	testCompileOnly 'org.projectlombok:lombok'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testAnnotationProcessor 'org.projectlombok:lombok'
}

tasks.named('test') {
	useJUnitPlatform()
}

// 개발용 정적 페이지는 운영 jar 에 안 싣는다.
//
// static/ 아래에 두면 모든 프로파일에서 서빙돼서, 운영 주소로도 그대로 열린다.
// 부르는 API 가 @Profile("local","perf") 라 실제로 동작하지는 않지만, 방을 만드는 순서와
// API 경로, 에러 코드가 화면에 다 적혀 있어서 내부 도구가 밖에 노출되는 셈이다.
//
// bootRun 은 build/resources/main 을 직접 보므로 로컬 개발에는 영향이 없다.
tasks.named('bootJar') {
	exclude 'static/dev-console.html'
	exclude 'static/sse-test.html'
}
